# openapi-first

./: .gitignore  LICENSE  README.md  WORKSPACE.bazel  build.gradle  pom.xml  settings.gradle
backend-v1/: BUILD.bazel  api.yaml  build.gradle  pom.xml
backend-v1/src/main/java/de/cegeka/jax/backend/v1/server/impl/: EchoGenerator.java
frontend-v1/: BUILD.bazel  api.yaml  build.gradle  pom.xml
frontend-v1/openapi-templates/: apiClient.mustache
frontend-v1/src/main/java/de/cegeka/jax/frontend/v1/server/impl/: EchoForwarder.java  FeignClientConfiguration.java
frontend-v1/src/main/resources/: application-default.properties
secured-spring-generator/: pom.xml
secured-spring-generator/src/main/java/de/cegeka/jax/: SecuredSpringGenerator.java
secured-spring-generator/src/main/resources/JavaSpring/: apiSecurity.mustache
